network-policies/policies/allow-curl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector:
    matchLabels:
      app: color-api
  policyTypes:
    - Ingress
  ingress:
    # - from: # or operations (pod 1 -> app: curl, tier: frontend (ALLOWED))
    #     - podSelector:
    #         matchLabels:
    #           app: curl
    #     - podSelector:
    #         matchLabels:
    #           tier: backend
    - from: 
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
          podSelector:
            matchLabels:
              app: traffic-generator
        - podSelector:
            matchLabels:
              app: curl
